2014-10-09  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61969
	* tree-nrv.c (pass_nrv::execute): Properly test for automatic
	variables.

2014-10-09  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2014-10-09  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/57003
	* regcprop.c (copyprop_hardreg_forward_1): If ksvd.ignore_set_reg,
	also check CALL_INSN_FUNCTION_USAGE for clobbers again after
	killing regs_invalidated_by_call.

2014-10-08  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2014-10-08  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/52941
	* config/sh/sync.md (atomic_exchangesi_hard, atomic_exchange<mode>_hard,
	atomic_fetch_<fetchop_name>si_hard,
	atomic_fetch_<fetchop_name><mode>_hard, atomic_fetch_nandsi_hard,
	atomic_fetch_nand<mode>_hard, atomic_<fetchop_name>_fetchsi_hard,
	atomic_<fetchop_name>_fetch<mode>_hard, atomic_nand_fetchsi_hard,
	atomic_nand_fetch<mode>_hard): Add missing set of T_REG.

2014-10-03  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/61144
	* varpool.c (ctor_for_folding): Do not fold WEAK symbols.

2014-10-03  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/62121
	* ipa-devirt.c (restrict_to_inner_class): Do not ICE when type is
	unknown.

2014-10-03  Jan Hubicka  <hubicka@ucw.cz>

	PR lto/62026
	* lto-streamer-out.c (lto_output): Handle thunks correctly.
	* cgraphclones.c (duplicate_thunk_for_node): Get thunk's arguments.

2014-10-03  Jakub Jelinek  <jakub@redhat.com>

	PR libgomp/61200
	* omp-low.c (taskreg_contexts): New variable.
	(scan_omp_parallel): Push newly created context into taskreg_contexts
	vector and move record layout code to finish_taskreg_scan.
	(scan_omp_task): Likewise.
	(finish_taskreg_scan): New function.
	(execute_lower_omp): Call finish_taskreg_scan on all taskreg_contexts
	vector elements and release it.

2014-10-02  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/63375
	* tree-sra.c (build_access_from_expr_1): Disqualify volatile
	references.
